--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,5 +129,19 @@ import '../styles/global.css'
 
 		<!-- Instagram Embed Script -->
 		<script async src="https://www.instagram.com/embed.js"></script>
+
+		<!-- Visitor Tracking Script -->
+		<script>
+			fetch("https://script.google.com/macros/s/AKfycbxvZNXq1f3CU8pEg-pgsij9VICglp62bLKH1l0YRPe4k4GdOFvvLaA0rmNQ2XzqrPRz0Q/exec", {
+				method: "POST",
+				body: JSON.stringify({
+					url: window.location.href,
+					userAgent: navigator.userAgent
+				}),
+				headers: {
+					"Content-Type": "application/json"
+				}
+			});
+		</script>
 	</body>
 </html>
