--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -26,7 +26,7 @@ const { currentPage = 'home' } = Astro.props;
         <button
           type="button"
           aria-label="Toggle menu"
-          class="flex flex-col space-y-1 mobile-menu-toggle"
+          class="flex flex-col justify-center items-center space-y-1 p-4 min-w-[48px] min-h-[48px] mobile-menu-toggle"
         >
           <span class="bg-white nav-scrolled:bg-gray-900 w-6 h-0.5 transition-colors"></span>
           <span class="bg-white nav-scrolled:bg-gray-900 w-6 h-0.5 transition-colors"></span>
