--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@
       <!-- Description and Copyright -->
       <div class="space-y-2 text-center md:text-right">
         <p class="text-gray-300">
-          Experience the perfect blend of refreshing drinks and stunning beach views in Golem, Albania.
+          Experience the perfect blend of refreshing drinks and stunning beach views.
         </p>
         <p class="text-gray-400">
           © 2025 Beach Bar Joni. All rights reserved.
