--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -12,7 +12,7 @@ import { menuData } from '../data/menu.js'
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Menu - Beach Bar Joni</title>
-		<meta name="description" content="Explore our menu at Beach Bar Joni - cocktails, beers, hot drinks, and refreshments in Golem, Albania." />
+		<meta name="description" content="Explore our menu at Beach Bar Joni - cocktails, beers, hot drinks, and refreshments." />
 		
 		<!-- Favicon -->
 		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
